--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     <div class="team-member">
                         <img src="images/member.png" alt="Headshot of a team member">
                         <h3>Board Member Name</h3>
-                        <p>Position</p>
+                        <p>CEO</p>
                     </div>
                 </div>
             </div>
