--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
+<div class="mobile-menu-overlay"></div>
 <nav class="navbar container">
     <a href="index.html" class="navbar-logo">
         <img src="images/darktakadomlogo.svg" alt="Takadom Logo">
