--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <header class="main-header"></header>
+ <!-- Header here 
+  <header class="main-header"></header> -->
+    <div class="mobile-menu-overlay"></div>
+<nav class="navbar container">
+    <a href="index.html" class="navbar-logo">
+        <img src="images/darktakadomlogo.svg" alt="Takadom Logo">
+    </a>
+    <div class="navbar-menu">
+        <ul class="navbar-links">
+            <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="about.html" class="nav-link">About Us</a></li>
+            <li><a href="programs.html" class="nav-link">Our Work</a></li>
+            <li><a href="news.html" class="nav-link">Media Center</a></li>
+            <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+        <a href="contact.html#donate" class="btn btn-primary nav-donate-btn">Donate</a>
+    </div>
+    <button class="hamburger-menu" aria-label="Open navigation menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </button>
+</nav>
 
     <main>
         <section class="hero" style="background-image: url('https://images.unsplash.com/photo-1531206715517-5c0ba140b2b8?q=80&w=2070&auto=format&fit=crop');">
