--- a/news.html
+++ b/news.html
@@ -12,30 +12,8 @@
 </head>
 <body>
 
- <!-- Header here 
-  <header class="main-header"></header> -->
-    <div class="mobile-menu-overlay"></div>
-<nav class="navbar container">
-    <a href="index.html" class="navbar-logo">
-        <img src="images/darktakadomlogo.svg" alt="Takadom Logo">
-    </a>
-    <div class="navbar-menu">
-        <ul class="navbar-links">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="programs.html" class="nav-link">Our Work</a></li>
-            <li><a href="news.html" class="nav-link">Media Center</a></li>
-            <li><a href="contact.html" class="nav-link">Contact</a></li>
-        </ul>
-        <a href="contact.html#donate" class="btn btn-primary nav-donate-btn">Donate</a>
-    </div>
-    <button class="hamburger-menu" aria-label="Open navigation menu">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-    </button>
-</nav>
- 
+    <header class="main-header"></header>
+
     <main>
         <section class="page-hero" style="background-image: url('images/news.png');">
             <div class="hero-content">
