speed up the counter

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="container">
                 <h2>Join Us in Making a Difference</h2>
                 <p>Your contribution, no matter the size, directly supports our programs and empowers the next generation of Palestinian leaders. Together, we can build a future of peace and opportunity.</p>
-                <a href="#" class="btn btn-secondary-light">Donate Securely</a>
+                <a href="contact.html#donate" class="btn btn-secondary-light">Donate Securely</a>
                 </div>
         </section>
     </main>
